--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:cardview-v7:23.1.0'
-    compile project(':PullToRefreshAndLoadMore')
+    compile project(':PullToRefresh')
 }
