--- a/PullToRefresh/build.gradle
+++ b/PullToRefresh/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.woxingxiao'
-def version = "2.0"
+apply plugin: 'com.jfrog.bintray'
+
+version = "2.1"
 
 android {
     compileSdkVersion 23
@@ -10,7 +11,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 6
+        versionCode 7
         versionName version
     }
 
@@ -25,4 +26,83 @@ android {
 dependencies {
     testCompile 'junit:junit:4.12'
     provided 'com.android.support:appcompat-v7:23.4.0'
+}
+
+def siteUrl = 'https://github.com/woxingxiao/PullToRefreshAndLoadMore'
+def gitUrl = 'https://github.com/woxingxiao/PullToRefreshAndLoadMore.git'
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+javadoc {
+    options {
+        encoding "UTF-8"
+        charSet 'UTF-8'
+        author true
+        links "http://docs.oracle.com/javase/7/docs/api"
+        title "PullToRefreshAndLoadMore"
+    }
+}
+
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "PullToRefreshAndLoadMore"
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                // Add your description here
+                name 'Android pull to refresh and load more library'
+                url siteUrl
+                // Set your license
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'woxingxiao'
+                        name 'Xiao'
+                        email 'Chauvet910@gmail.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
+            }
+        }
+    }
 }
