--- a/PullToRefresh/build.gradle
+++ b/PullToRefresh/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
-
+group = "com.xw.repo"
 version = "2.1"
 
 android {
